Fix AutoUpdater, second try